--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,12 +31,14 @@
         <button type="submit" class="chk-btn">Check Marks</button>
     </div>
     </form>
-    <a href="/profile"><img class="img-profgen" src="/static/img/profile.png"></a>
-    <a href="/dashapp"><img class="img-analytics" src="/static/img/analytics.png"></a>
-    <div class="features-name">
-        <a class="custom-a" href="/profile">Generate Profile</a>
-        <span style="padding-left: 48px;"></span>
-        <a class="custom-a" href="/dashapp">Analytics</a>
+    <div class="extra">
+        <a href="/profile"><img class="img-profgen" src="/static/img/profile.png"></a>
+        <a href="/dashapp"><img class="img-analytics" src="/static/img/analytics.png"></a>
+        <div class="features-name">
+            <a class="custom-a" href="/profile">Generate Profile</a>
+            <span style="padding-left: 48px;"></span>
+            <a class="custom-a" href="/dashapp">Analytics</a>
+        </div>
     </div>
 </div>
 {% endblock body %}
