--- a/app/templates/profile_render.html
+++ b/app/templates/profile_render.html
@@ -5,6 +5,8 @@
     <div class="name-title">{{name}}'s Current Record</div>
     <div class="college-branch">{{college}}, {{branch}}</div>
     <div class="info-block">Your Current CGPA is {{cgpa}}</div>
+    <div class="info-block">Your Average Percentage is {{percentage_final}}</div>
+
 <div style="padding-bottom: 3%;"></div>
 {% for data in parsed_data %}
 <div class="info-block-profile">Semester - {{data[0]}}</div>
