--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,15 +7,27 @@
     <center>
         <h3 style="font-family: cursive;">IPU Results</h3>
         <p >
-        <ol class="info-block-list">
+        <ul class="info-block-list">
             <li>This is an unofficial result portal developed to ease the process of checking the results.</li>
             <li>Generally, we get results in form of long PDF's which are difficult to read and one can barely calculate the percentage.</li>
-            <li>Predicting the ranks is next to impossible thing! This portal serves all these things.</li> 
-            <li>You get a nice marks presentation, percentage, SGPA, CGPA, and ranks at both college and university level.</li> 
-            <li>You can also generate your profile which gives out all the previous semesters' results.</li> 
-            <li>What's for me in this? Nothing! No ads, no bloatware.</li> 
-        </ol>
+            <li>Predicting the ranks is next to impossible thing! This portal serves all these things.</li>
+            <li>You get a nice marks presentation, percentage, SGPA, and ranks at both college and university level using <a href="/">Portal.</a></li> 
+            <li>You can also generate your profile which gives out all the previous semesters' results and CGPA using <a href="/profile">Generate Profile</a></li> 
+            <li>You can analyse various trends in this result data using <a href="/dashapp">Analytics Dashboard</a></li>
+            <li>You can view the rank lists with or without various filters using <a href="/Ranks">Rank list</a>The ranks are sorted in decreasing order of Percentage.</li>
+            <li>Reappear Cases are not reflected in this portal nor any marks upgradation. If you want to update your marks here, you can contact me on <a href="https://www.linkedin.com/in/kaustubh-gupta">LinkedIn</a></li>
+            <li>What's for me in this? Nothing! No ads, no bloatware!</li> 
+        </ul>
         <p>
     </center>
 </div>
+<center>
+    <div class="promos">
+        <a href="https://www.facebook.com/kaustubh.gupta.1828/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Kaustubh1828" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/kaustubh-gupta" class="fa fa-linkedin"></a>
+        <a href="https://github.com/kaustubhgupta" class="fa fa-github"></a>
+        <a href="https://medium.com/@kaustubhgupta1828" class="fa fa-medium"></a>
+    </div>
+</center>
 {% endblock body %}
