--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,10 +33,28 @@
     </form>
     <a href="/profile"><img class="img-profgen" src="/static/img/profile.png"></a>
     <a href="/dashapp"><img class="img-analytics" src="/static/img/analytics.png"></a>
+    <a href="/Ranks"><img class="img-ranks" src="/static/img/ranks.jpeg"></a>
     <div class="features-name">
-        <a class="custom-a" href="/profile">Generate Profile</a>
-        <span style="padding-left: 48px;"></span>
-        <a class="custom-a" href="/dashapp">Analytics</a>
+        <a class="custom-a" href="/profile"><button class="hyperlink-btn">Generate Profile</a></button>
+        <span style="padding-left: 66px;"></span>
+        <a class="custom-a" href="/dashapp"><button class="hyperlink-btn">Analytics</a></button>
+        <span style="padding-left: 82px;"></span>
+        <a class="custom-a" href="/Ranks"><button class="hyperlink-btn">Rank List</a></button>
+    </div>
+    <div class="features-name-mobile">
+        <a class="custom-a" href="/profile"><button class="hyperlink-btn">Generate Profile</a></button>
+        <span style="padding-left: 31px;"></span>
+        <a class="custom-a" href="/Ranks"><button class="hyperlink-btn">Rank List</a></button>
+        <a class="custom-a" href="/dashapp"><button class="hyperlink-btn-analytics">Analytics</a></button>
     </div>
 </div>
+<center>
+    <div class="promos">
+        <a href="https://www.facebook.com/kaustubh.gupta.1828/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Kaustubh1828" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/kaustubh-gupta" class="fa fa-linkedin"></a>
+        <a href="https://github.com/kaustubhgupta" class="fa fa-github"></a>
+        <a href="https://medium.com/@kaustubhgupta1828" class="fa fa-medium"></a>
+    </div>
+</center>
 {% endblock body %}
