--- a/app/templates/marksheet.html
+++ b/app/templates/marksheet.html
@@ -16,7 +16,8 @@
     <div class="info-block">College Branch Rank: {{college_branch_rank[0]}}/{{college_branch_rank[1]}}</div>
     <div class="info-block">University Overall Rank: {{university_overall_rank[0]}}/{{university_overall_rank[1]}}</div>
     <div class="info-block">University Branch Rank: {{university_branch_rank[0]}}/{{university_branch_rank[1]}}</div>
-    <div class="info-block">For CGPA, refer <a href="/profile">Profile Generation</a></div>
+    <br>
+    <div class="info-block">For CGPA, refer <a href="/profile">Profile Generation </a>and for full Rank Lists, refer <a href="/Ranks">Rank List</a></div>
 </center>
 <div style="padding-bottom: 5%;"></div>
 {% endblock body %}
