--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -26,4 +26,13 @@
     </div>
     </form>
 </div>
+<center>
+    <div class="promos">
+        <a href="https://www.facebook.com/kaustubh.gupta.1828/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Kaustubh1828" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/kaustubh-gupta" class="fa fa-linkedin"></a>
+        <a href="https://github.com/kaustubhgupta" class="fa fa-github"></a>
+        <a href="https://medium.com/@kaustubhgupta1828" class="fa fa-medium"></a>
+    </div>
+</center>
 {% endblock body %}
