--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,17 +6,22 @@
     <div style="padding-bottom: 5%;"></div>
     <center>
         <h3 style="font-family: cursive;">IPU Results</h3>
-        <p >
+        <p>
         <ul class="info-block-list">
             <li>This is an unofficial result portal developed to ease the process of checking the results.</li>
-            <li>Generally, we get results in form of long PDF's which are difficult to read and one can barely calculate the percentage.</li>
+            <li>Generally, we get results in form of long PDF's which are difficult to read and one can barely calculate
+                the percentage.</li>
             <li>Predicting the ranks is next to impossible thing! This portal serves all these things.</li>
-            <li>You get a nice marks presentation, percentage, SGPA, and ranks at both college and university level using <a href="/">Portal.</a></li> 
-            <li>You can also generate your profile which gives out all the previous semesters' results and CGPA using <a href="/profile">Generate Profile</a></li> 
+            <li>You get a nice marks presentation, percentage, SGPA, and ranks at both college and university level
+                using <a href="/">Portal.</a></li>
+            <li>You can also generate your profile which gives out all the previous semesters' results and CGPA using <a
+                    href="/profile">Generate Profile</a></li>
             <li>You can analyse various trends in this result data using <a href="/dashapp">Analytics Dashboard</a></li>
-            <li>You can view the rank lists with or without various filters using <a href="/Ranks">Rank list</a>The ranks are sorted in decreasing order of Percentage.</li>
-            <li>Reappear Cases are not reflected in this portal nor any marks upgradation. If you want to update your marks here, you can contact me on <a href="https://www.linkedin.com/in/kaustubh-gupta">LinkedIn</a></li>
-            <li>What's for me in this? Nothing! No ads, no bloatware!</li> 
+            <li>You can view the rank lists with or without various filters using <a href="/Ranks">Rank list</a>The
+                ranks are sorted in decreasing order of Percentage.</li>
+            <li>Reappear Cases are not reflected in this portal nor any marks upgradation. If you want to update your
+                marks here, you can contact me on <a href="https://www.linkedin.com/in/kaustubh-gupta">LinkedIn</a></li>
+            <li>What's for me in this? Nothing! No ads, no bloatware!</li>
         </ul>
         <p>
     </center>
